--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 }
 
 .text-shadow {
-  text-shadow: 1px 1px 2px #0e1a1f, 0 0 1em #0e1a1f, 0 0 0.2em #0e1a1f;
+  text-shadow: 1px 1px 2px #0e1a1f99, 0 0 1em #0e1a1f99, 0 0 0.2em #0e1a1f99;
 }
 
 .shadow-center {
