--- a/src/styles/error404.css
+++ b/src/styles/error404.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30em;
-  height: 30em;
+  /* width: 30em;
+  height: 30em; */
 }
 
 .main {
