--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,11 @@
   -webkit-box-shadow: 0px 0px 5px 6px #C8F90477; /* For older iOS devices */
   box-shadow: 0px 0px 6px 6px #C8F90477; /* Standard */
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
